--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "axios": "^1.7.7",
+    "formik": "^2.4.6",
+    "next": "15.0.2",
+    "react": "^18",
+    "react-dom": "^18",
+    "sass": "^1.80.6",
+    "swiper": "^11.1.14",
+    "yup": "^1.4.0",
+    "zustand": "^5.0.1"
   }
 }
