--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.11",
     "next": "15.0.2",
+    "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "react-phone-input-2": "^2.15.1",
+    "react-toastify": "^10.0.6",
     "sass": "^1.80.6",
     "swiper": "^11.1.14",
     "yup": "^1.4.0",
