--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.11.11",
     "next": "15.0.2",
+    "nodemailer": "^6.9.16",
     "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
