--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-phone-input-2": "^2.15.1",
+    "react-select": "^5.8.3",
     "sass": "^1.80.6",
     "swiper": "^11.1.14",
     "yup": "^1.4.0",
