--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.0.3",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.11",
