what we do translations

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "swiper": "^11.1.14",
     "yup": "^1.4.0",
     "zustand": "^5.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
